// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`markdownToReactPDF > should render a heading node with style 1`] = `
<VIEW>
  <VIEW>
    <TEXT
      style={
        {
          "fontSize": 20,
          "marginBottom": 15,
        }
      }
    >
      Heading 1
    </TEXT>
  </VIEW>
  <VIEW>
    <TEXT
      style={
        {
          "fontSize": 16,
          "marginBottom": 12,
        }
      }
    >
      Heading 2
    </TEXT>
  </VIEW>
  <VIEW>
    <TEXT
      style={
        {
          "fontSize": 14,
          "marginBottom": 10,
        }
      }
    >
      Heading 3
    </TEXT>
  </VIEW>
</VIEW>
`;

exports[`markdownToReactPDF > should render a paragraph node with style 1`] = `
<VIEW>
  <VIEW>
    <TEXT
      style={
        {
          "fontFamily": "Times-Roman",
          "fontSize": 12,
          "marginBottom": 10,
        }
      }
    >
      <TEXT>
        Paragraph
      </TEXT>
    </TEXT>
  </VIEW>
</VIEW>
`;

exports[`markdownToReactPDF > should render a root node with children 1`] = `
<VIEW>
  <VIEW>
    <TEXT
      style={
        {
          "fontSize": 20,
          "marginBottom": 15,
        }
      }
    >
      Heading 1
    </TEXT>
  </VIEW>
  <VIEW>
    <TEXT
      style={
        {
          "fontSize": 16,
          "marginBottom": 12,
        }
      }
    >
      Heading 2
    </TEXT>
  </VIEW>
  <VIEW>
    <TEXT
      style={
        {
          "fontSize": 14,
          "marginBottom": 10,
        }
      }
    >
      Heading 3
    </TEXT>
  </VIEW>
  <VIEW>
    <TEXT
      style={
        {
          "fontFamily": "Times-Roman",
          "fontSize": 12,
          "marginBottom": 10,
        }
      }
    >
      <TEXT>
        Paragraph
      </TEXT>
    </TEXT>
  </VIEW>
</VIEW>
`;

exports[`markdownToReactPDF > should render an emphasis node with style 1`] = `
<VIEW>
  <VIEW>
    <TEXT
      style={
        {
          "fontFamily": "Times-Roman",
          "fontSize": 12,
          "marginBottom": 10,
        }
      }
    >
      <TEXT>
        <TEXT
          style={
            {
              "fontSize": 12,
              "textDecoration": "underline",
            }
          }
        >
          Emphasis
        </TEXT>
      </TEXT>
      <TEXT>
        

      </TEXT>
    </TEXT>
  </VIEW>
</VIEW>
`;

exports[`markdownToReactPDF > should render an image node with style 1`] = `
<VIEW>
  <VIEW>
    <TEXT
      style={
        {
          "fontFamily": "Times-Roman",
          "fontSize": 12,
          "marginBottom": 10,
        }
      }
    >
      <IMAGE
        src="https://example.com/logo.png"
        style={
          {
            "height": 23,
            "marginLeft": 10,
            "marginRight": 10,
            "marginTop": 20,
            "width": 23,
          }
        }
      />
    </TEXT>
  </VIEW>
</VIEW>
`;
